# TheSimulationGame

./: .gitignore  Animals.cpp  Animals.h  CMakeLists.txt  Matrix.cpp  Matrix.h  Organism.cpp  Organism.h  Plants.cpp  Plants.h  SaveData.txt  TODO  Utils.cpp  Utils.h  WorldManager.cpp  WorldManager.h  classes  main.cpp  main.h  readme.md  simulation_game  utility.cpp  utility.h
Animals/: Antelope.cpp  Antelope.h  Fox.cpp  Fox.h  Human.cpp  Human.h  Sheep.cpp  Sheep.h  Turtle.cpp  Turtle.h  Wolf.cpp  Wolf.h
Plants/: Belladona.cpp  Belladona.h  Grass.cpp  Grass.h  Guarana.cpp  Guarana.h  Hogweed.cpp  Hogweed.h  SowThistle.cpp  SowThistle.h
Saves/: SaveData.txt
